Fix spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,14 +16,23 @@
   width: 100%;
 }
 
-body > main > * {
-  max-width: 50rem;
-  padding-inline: 1.5rem;
-  margin-inline: auto;
+html {
+  container-type: inline-size;
 }
 
-.full-width {
-  max-width: none;
+main {
+  --maximum-text-width: 50rem;
+  --minimum-inline-margin: 1.5rem;
+  --actual-margin: max(
+    var(--minimum-inline-margin),
+    (100cqw - var(--maximum-text-width)) / 2
+  );
+  margin-inline: var(--actual-margin);
+}
+
+.full-bleed,
+.katex-display {
+  margin-inline: calc(var(--actual-margin) * -1) !important;
 }
 
 .katex-display {
